--- a/static/index.html
+++ b/static/index.html
@@ -20,12 +20,29 @@
      <header>
        <div class="container">
            <div class="row">
-         </div>
-       </div>
+               <div class="col-sm-6">
+                   <div class="logo">
+                     <img src="images/Official_logo.jpg">
+                   </div>
+               </div>
+               <div class="description">
+                 <div class="col-sm-6">
+                   <h1>Conference about Open Source</h1>
+                    <p>The 5th edition of the Drupalcamp Cebu is in the making. We will plan exciting sessions and tasks about the Drupal, PHP, DevOPS, UX and more. To recieve the news about the event before everyone else, subscribe to our news letter below.</p>
+                    <form>
+                      <div class="form-wrapper col-xs-12">
+                        <div class="col-xs-8"><input type="text" placeholder="Email address" class="input-text"></div>
+                        <div class="col-xs-4"><input type="submit" value="Submit" class="submit-btn"></div>
+                      </div>
+                    </form>
+                 </div>
+               </div>
+             </div>
      </header>
      <section class ="content">
        <div class="container">
            <div class="row">
+
          </div>
        </div>
      </section>
