Issue  #9. Create html markup for menu.

--- a/static/index.html
+++ b/static/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html lang = "en">
-<head>
- <meta charset="utf-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Drupalcamp Cebu 2018</title>
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
- <link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans" rel="stylesheet">
- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
- <meta property="og:url" content="" />
- <meta property="og:title" content="Drupalcamp Cebu 2018" />
- <meta property="og:description" content="Drupalcamp Cebu is a one day conference about Web development with sessions about Drupal, DevOPS, UI/UX and Business." />
- <meta property="og:image" content="" />
-</head>
+  <head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Drupalcamp Cebu 2018</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css">
+   <script src="script/mobile-menu.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans" rel="stylesheet">
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+   <meta property="og:url" content="" />
+   <meta property="og:title" content="Drupalcamp Cebu 2018" />
+   <meta property="og:description" content="Drupalcamp Cebu is a one day conference about Web development with sessions about Drupal, DevOPS, UI/UX and Business." />
+   <meta property="og:image" content="" />
+  </head>
    <body>
      <header>
+      <div class="sitename-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="text-logo-container col-xs-10 col-md-4">
+              <div class="text-logo"><a href="#">drupalcamp <span class="text-logo-second">cebu</span></a></div>
+            </div>
+            <div class="mobile-menu">
+              <span class="hamburger col-xs-2" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+              <div id="side-navigation" class="menu-wrapper" >
+                <div class="close-button col-xs-2"><a href="javascript:void(0)" onclick="closeNav()">&times;</a></div>
+                  <ul class="menu-list col-xs-10 col-md-8">
+                  <li class="menu-margin-top"><a href="#">venue</a></li>
+                  <li><a href="#">sponsors</a></li>
+                  <li><a href="#">pricing</a></li><br><br>
+                  </ul>
+                <div class="register-button col-xs-12"><a href="#">register</a></div>
+              </div> 
+            </div>
+            <div class="desktop-menu col-md-8">
+              <div class="ds-menu-wrapper" >
+                  <ul class="menu-list">
+                  <li><a href="#">venue</a></li>
+                  <li><a href="#">sponsors</a></li>
+                  <li><a href="#">pricing</a></li>
+                  <li class="register-button"><a href="#">register</a></li>
+                  </ul>
+              </div> 
+            </div>
+          </div>
+        </div>
+      </div>
        <div class="container">
            <div class="row">
                <div class="col-sm-6">
@@ -38,19 +68,19 @@
                  </div>
                </div>
              </div>
+           </div>
      </header>
      <section class ="content">
        <div class="container">
-           <div class="row">
-
-         </div>
+          <div class="row">
+          </div>
        </div>
      </section>
      <footer>
        <div class="container">
            <div class="row">
-         </div>
+          </div>
        </div>
-    </footer>
+    </footer> 
    </body>
 </html>
