--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
    <meta property="og:url" content="" />
    <meta property="og:title" content="Drupalcamp Cebu 2018" />
    <meta property="og:description" content="Drupalcamp Cebu is a one day conference about Web development with sessions about Drupal, DevOPS, UI/UX and Business." />
-   <meta property="og:image" content="file:///home/travs/drupalcamp2018/drupalcampcebu2018/static/images/Drupalcampcebu2017.jpg" />
+   <meta property="og:image" content="images/Drupalcampcebu2017.jpg" />
   </head>
    <body>
      <header>
@@ -32,7 +32,7 @@
                   <li><a href="#">pricing</a></li><br><br>
                   </ul>
                 <div class="register-button col-12"><a href="#">register</a></div>
-              </div> 
+              </div>
             </div>
             <div class="desktop-menu col-md-7">
               <div class="ds-menu-wrapper" >
@@ -42,7 +42,7 @@
                   <li><a href="#">pricing</a></li>
                   <li class="register-button"><a href="#">register</a></li>
                   </ul>
-              </div> 
+              </div>
             </div>
           </div>
         </div>
@@ -80,6 +80,6 @@
            <div class="row">
           </div>
        </div>
-    </footer> 
+    </footer>
    </body>
 </html>
