--- a/static/index.html
+++ b/static/index.html
@@ -50,8 +50,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-            <div class="logo">
-              <img src="images/Official_logo.jpg">
+            <div class="logo-wrapper">
+              <div class="logo"></div>
             </div>
           </div>
         <div class="description  col-lg-6">
