Issue #19. Create generic code for link button in _global.scss file. Fix spacing issues on sass.

--- a/static/index.html
+++ b/static/index.html
@@ -74,8 +74,8 @@
             <div class = "content-wrapper2 col-lg-12">
               <h2>Sponsors</h2>
                 <p>Your contribution will help lower ticket prices for attendees, and as a sponsor, there is something in it for you</p>
-              <div class = "button">  
-                <button type="button" class ="sponsor-button">Sponsor Now</button>
+              <div class = "link-btn">  
+                <a href="#">Sponsor now</a>
               </div>
               <h4>Gold Sponsors</h4>
               <div class ="sponsors-image">
