Issue #19. Rename class content-wrapper2 to sponsor-region.

--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
       <div class = "content-wrapper">
         <div class="container">
           <div class="row">
-            <div class = "content-wrapper2 col-lg-12">
+            <div class = "sponsor-region col-lg-12">
               <h2>Sponsors</h2>
                 <p>Your contribution will help lower ticket prices for attendees, and as a sponsor, there is something in it for you</p>
               <div class = "link-btn">  
