Issue #15. Footer-top and Footer-bottom of the website.

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
    <script src="script/mobile-menu.js"></script>
+   <script defer src="/static/fontawesome/fontawesome-all.js"></script>
    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans" rel="stylesheet">
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    <meta property="og:url" content="" />
@@ -54,18 +55,18 @@
               <img src="images/Official_logo.jpg">
             </div>
           </div>
-        <div class="description  col-lg-6">
-          <div class="col-12 col-sm-12 col-md-12">
-            <h1>Conference about Open Source</h1>
-              <p>The 5th edition of the Drupalcamp Cebu is in the making. We will plan exciting sessions and tasks about the Drupal, PHP, DevOPS, UX and more. To recieve the news about the event before everyone else, subscribe to our news letter below.</p>
-            <form>
-              <div class="form-wrapper col-12">
-                <input type="text" placeholder="Email address" class="input-text col-7">&emsp;
-                <input type="submit" value="Submit" class="submit-btn col-4">
-              </div>
-            </form>
+          <div class="description  col-lg-6">
+            <div class="col-12 col-sm-12 col-md-12">
+              <h1>Conference about Open Source</h1>
+                <p>The 5th edition of the Drupalcamp Cebu is in the making. We will plan exciting sessions and tasks about the Drupal, PHP, DevOPS, UX and more. To recieve the news about the event before everyone else, subscribe to our news letter below.</p>
+              <form>
+                <div class="form-wrapper col-12">
+                  <input type="text" placeholder="Email address" class="input-text col-7">&emsp;
+                  <input type="submit" value="Submit" class="submit-btn col-4">
+                </div>
+              </form>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </header>
@@ -76,8 +77,46 @@
        </div>
       </section>
     <footer>
-      <div class="container">
-        <div class="row">
+      <div class="footer-top">
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-lg-3">
+                <div class="drupalcebu_header">
+                  <h3>Drupal in Cebu</h3>
+                  <p>This camp is brought to you by <a href="https://wwww.facebook.com/groups/drupalcebu" target="_blank">Drupal Cebu User Group</a></p>
+                  <p>Access the source code of this website on Github. This website is all open source</p>
+                  <p>Drupal meetups every last Wednesday of the month, find us on <a href="https://www.meetup.com/drupal-ph/" target="_blank">meetup.com</a></p>
+                  <p class="button-link">
+                  <a class="button-link text-display-large" href="https://www.meetup.com/drupal-ph/" target="_blank">Drupal Monthly Meetups</a>
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="drupaltwitter_header">
+                  <h3>Drupalcebu on Twitter</h3>
+                  <p> <i class="fa fa-twitter"></i><a href="https://twitter.com/drupalcampcebu" target="_blank">@DrupalCampCebu</a> Announcing Drupalcamp's keynote: <a href="https://twitter.com/johnalbin" target="_blank">@JohnAlbin !</a> More information on <a href="https://2018.drupalcebu.org">https://2018.drupalcebu.org</a></p>
+                  <p> <i class="fa fa-twitter"></i><a href="https://twitter.com/drupalcampcebu" target="_blank">@DrupalCampCebu</a> Planning a trip to South East Asia in November? Join the fun in Cebu! #drupal #drupical #travel</p>
+                  <p> <i class="fa fa-twitter"></i><a href="https://twitter.com/drupalcampcebu" target="_blank">@DrupalCampCebu</a> Drupalcamp Cebu 2017 on 25 Nov., Have you heard? <a href="https://groups.drupal.org/node/517132" target="_blank">https://groups.drupal.org/node/517132</a></p>
+                </div>
+              </div>
+              <div class="map col-lg-6">
+                <div class="col-12">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.597639108888!2d123.87922241442327!3d10.293967427854406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99c015a4bf233%3A0x95d783198f4634f8!2sCebu+Institute+of+Technology+-+University!5e0!3m2!1sen!2sph!4v1521721132774" width="510" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <img src="images/drupalcebu_puso.svg">
+              <p>Since 2014, Drupalcamp Cebu is brought to you by the Drupal Cebu User Group.</p>
+              <p>Drupalcamp Cebu 2017 logo by Ron Corona.<br>Drupal is a registered trademark of Dries Buytaert.</p>
+              <p class="copyright">Copyright Drupal Cebu User Group © 2014-2017. All rights reserved.</p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
